--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Hananiah Linde</title>
+    <title>Rewind: A Coding Project By Hananiah Linde</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"> <img src="img/tab_icon.svg" class="d-inline-block align-text-top" alt="logo" width="30" height="24"> APP NAME</a>
+            <a class="navbar-brand" href="#"> <img src="img/tab_icon.svg" class="d-inline-block align-text-top" alt="logo" width="30" height="24"> REWIND</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="http://github.com/hananiah-linde/Rewind">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="http://hananiahlinde.com/">About</a>
@@ -49,9 +49,8 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3"> APP NAME: A Coding Project</h1>
-                    <h4 class="lead">Live life one loop at a time. A javascript coding exercise using loops.
-                        Write a program that displays the numbers 0 to 100. Display the even numbers in <strong>BOLD.</strong>
+                    <h1 class="display-5 fw-bold lh-1 mb-3"> Rewind: A Coding Project</h1>
+                    <h4 class="lead">There and back again. A Javascript coding exercise using arrays. Write a program that displays a string in <strong>REVERSE.</strong>
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span> CSS and Bootstrap Layout</li>
@@ -77,7 +76,7 @@
                     </h5>
                 </div>
                 <div class="col">
-                    <img src="img/HundoLogo.svg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                    <img src="img/RewindLogo.svg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
                 </div>
             </div>
         </div>
